--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@clerk/nextjs": "^5.2.2",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.2.1",
+    "@stream-io/video-react-sdk": "^1.2.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.376.0",
